--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <input type="range" id="shiny-slider" min="0.1" max="15" value="5" step="0.1">
         <br>
     </div>
-    <script src="gl-matrix.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.8.1/gl-matrix-min.js"></script>
     <script>
         const canvas = document.getElementById('canvas');
         const gl = canvas.getContext('webgl');
